# unishort

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2020-08-24-225814_create_urls/: down.sql  up.sql
migrations/2023-07-17-163057_public and clicks/: down.sql  up.sql
migrations/2023-07-18-175427_remove unique url requirement/: up.sql
src/: blog.rs  codepoint_list.rs  db.rs  main.rs  models.rs  schema.rs  unicode_table.rs  url_codepoint.rs
static/: index.html  result.html  styles.css  styles2.css
template/: index.css  index.html  index_new.html  result.html
templates/: index.css  index.html  index_new.html.hbs  layout.html.hbs
templates/blog/: about.html.hbs  list.html.hbs  template.html.hbs
