[package]
name = "url-shortener"
version = "0.1.0"
authors = ["Maximilian von Gaisberg <github@vongaisberg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
rocket = "0.5.0-rc.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
unicode_names2 = "0.4.0"
url = "2.1.1"
rand_regex = "0.14.2"
regex = "1.3.9"
lazy_static = "1.4.0"
# minify_html_macro = { path = "../minify_html_macro" }


[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]